syntax = "proto3";
package combat;

option go_package = "e.coding.net/mmstudio/blade/server/proto/combat";

import "game/att.proto";

// unit scene att
message UnitInfo {
    int32 UnitTypeId = 1;
    repeated game.Att UnitAttList = 2;
}

///////////////////////////////////////////////////
// service
///////////////////////////////////////////////////
service CombatService {
    rpc StartStageCombat (StartStageCombatReq) returns (StartStageCombatReply) {}
}

message StartStageCombatReq {
    int64 SceneId = 1;          // generated by game service
    int32 SceneType = 2;
    int64 AttackId = 3;
    repeated UnitInfo AttackUnitList = 4;
    int64 DefenceId = 5;
    repeated UnitInfo DefenceUnitList = 6;
}

message StartStageCombatReply {
    int64 SceneId = 1;
    int64 AttackId = 2;
    int64 DefenceId = 3;
    bool Result = 4; // true == win
}


